# altitude-ctrl-fw-1

./: CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  can_manager.c  can_manager.h  controller.c  controller.h  display.c  display.h  export.c  export.h  idf_component.yml  keypad.c  keypad.h  main.c
main/ui/: CMakeLists.txt  altitude_ctrl_ui_1.c  altitude_ctrl_ui_1.h  altitude_ctrl_ui_1_gen.c  altitude_ctrl_ui_1_gen.h  altitude_ctrl_ui_1_mini.c  altitude_ctrl_ui_1_mini.h  altitude_ctrl_ui_1_mini_gen.c  altitude_ctrl_ui_1_mini_gen.h  file_list_gen.cmake  globals.xml  project.xml
main/ui/components/bound_button/: bound_button.xml  bound_button_gen.c  bound_button_gen.h
main/ui/images/: icon_arrow_down_data.c  icon_arrow_left_data.c  icon_arrow_right_data.c  icon_arrow_up_data.c  icon_battery_data.c  icon_battery_full_data.c  icon_bell_data.c  icon_bluetooth_data.c  icon_calendar_data.c  icon_camera_data.c  icon_check_data.c  icon_chevron_down_data.c  icon_chevron_left_data.c  icon_chevron_right_data.c  icon_chevron_up_data.c  icon_clock_data.c  icon_close_data.c  icon_download_data.c  icon_edit_data.c  icon_heart_data.c  icon_home_data.c  icon_info_data.c  icon_lock_data.c  icon_mail_data.c  icon_menu_data.c  icon_minus_data.c  icon_moon_data.c  icon_pause_data.c  icon_play_data.c  icon_plus_data.c  icon_power_data.c  icon_refresh_data.c  icon_search_data.c  icon_settings_data.c  icon_signal_data.c  icon_star_data.c  icon_sun_data.c  icon_trash_data.c  icon_unlock_data.c  icon_upload_data.c  (+6 more)
main/ui/screens/: screen_components_gen.c  screen_components_gen.h
(+65 files in other folders)
